--- a/MyUniversity.Dal/MyUniversity.Dal.csproj
+++ b/MyUniversity.Dal/MyUniversity.Dal.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Entities\Department.cs" />
     <Compile Include="Entities\Enrollment.cs" />
     <Compile Include="Entities\EntityBase.cs" />
+    <Compile Include="Entities\IEnrollmentRepository.cs" />
     <Compile Include="Entities\OfficeAssignment.cs" />
     <Compile Include="Entities\Profile.cs" />
     <Compile Include="Entities\StudentProfile.cs" />
@@ -110,9 +111,19 @@
     <Compile Include="Mappings\NHibernate\StudentProfileMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Contracts\IBaseRepository.cs" />
+    <Compile Include="Repositories\Contracts\ICourseRepository.cs" />
+    <Compile Include="Repositories\Contracts\IDepartmentRepository.cs" />
+    <Compile Include="Repositories\Contracts\IInstructorProfileRepository.cs" />
+    <Compile Include="Repositories\Contracts\IOfficeAssignmentRepository.cs" />
+    <Compile Include="Repositories\Contracts\IPersonRepository.cs" />
     <Compile Include="Repositories\Contracts\IStudentProfileRepository.cs" />
     <Compile Include="Repositories\Contracts\IUnitOfWork.cs" />
     <Compile Include="Repositories\EntityFramework\BaseRepository.cs" />
+    <Compile Include="Repositories\EntityFramework\CourseRepository.cs" />
+    <Compile Include="Repositories\EntityFramework\DepartmentRepository.cs" />
+    <Compile Include="Repositories\EntityFramework\InstructorProfileRepository.cs" />
+    <Compile Include="Repositories\EntityFramework\OfficeAssignmentRepository.cs" />
+    <Compile Include="Repositories\EntityFramework\PersonRepository.cs" />
     <Compile Include="Repositories\EntityFramework\StudentProfileRepository.cs" />
     <Compile Include="Repositories\EntityFramework\UnitOfWork.cs" />
     <Compile Include="Repositories\NHibernate\BaseRepository.cs" />
