--- a/MyUniversity.Contracts/MyUniversity.Contracts.csproj
+++ b/MyUniversity.Contracts/MyUniversity.Contracts.csproj
@@ -42,9 +42,13 @@
   <ItemGroup>
     <Compile Include="Constants\AppSettingConstant.cs" />
     <Compile Include="Constants\EntityConstant.cs" />
-    <Compile Include="Metadata\StudentMetadata.cs" />
-    <Compile Include="Metadata\StudentProfileMetadata.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\CourseModel.cs" />
+    <Compile Include="Models\DepartmentModel.cs" />
+    <Compile Include="Models\EnrollmentModel.cs" />
+    <Compile Include="Models\InstructorModel.cs" />
+    <Compile Include="Models\OfficeAssignmentModel.cs" />
+    <Compile Include="Models\PersonBaseModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IBaseService.cs" />
