--- a/MyUniversity.Contracts/MyUniversity.Contracts.csproj
+++ b/MyUniversity.Contracts/MyUniversity.Contracts.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IBaseService.cs" />
     <Compile Include="Services\IStudentService.cs" />
+    <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\StudentViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
