--- a/MyUniversity.Api/Web.config
+++ b/MyUniversity.Api/Web.config
@@ -7,6 +7,9 @@
   <appSettings>
     <add key="DbFrameworkType" value="EntityFramework" />
   </appSettings>
+  <connectionStrings>
+    <add name="MyUniversityDb" connectionString="data source=.;initial catalog=MyUniversity;MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -40,6 +43,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
