--- a/MyUniversity.Dal/MyUniversity.Dal.csproj
+++ b/MyUniversity.Dal/MyUniversity.Dal.csproj
@@ -171,6 +171,13 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)bin\Debug\MyUniversity.Dal.dll" "$(SolutionDir)MyUniversity.WebApi\bin\" /y /i /q</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
