--- a/MyUniversity.Contracts/MyUniversity.Contracts.csproj
+++ b/MyUniversity.Contracts/MyUniversity.Contracts.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IBaseService.cs" />
+    <Compile Include="Services\ICourseService.cs" />
+    <Compile Include="Services\IDepartmentService.cs" />
     <Compile Include="Services\IStudentService.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\StudentViewModel.cs" />
