--- a/MyUniversity.Services/MyUniversity.Services.csproj
+++ b/MyUniversity.Services/MyUniversity.Services.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseService.cs" />
+    <Compile Include="CourseService.cs" />
+    <Compile Include="DepartmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
   </ItemGroup>
