--- a/MyUniversity.Web/Web.config
+++ b/MyUniversity.Web/Web.config
@@ -27,6 +27,12 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404"/>
+      <remove statusCode="400"/>
+      <error statusCode="404" responseMode="ExecuteURL" path="/Error/NotFound"/>
+      <error statusCode="400" responseMode="ExecuteURL" path="/Error/BadRequest"/>
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
