--- a/MyUniversity.Api/MyUniversity.Api.csproj
+++ b/MyUniversity.Api/MyUniversity.Api.csproj
@@ -129,6 +129,10 @@
       <Project>{BCB4DDFD-F7D7-4187-AC3F-63AF6ABEEFD1}</Project>
       <Name>MyUniversity.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MyUniversity.Dal\MyUniversity.Dal.csproj">
+      <Project>{4a63ae90-bc49-4ac2-b2e7-4b5f0c293e13}</Project>
+      <Name>MyUniversity.Dal</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
