--- a/MyUniversity.Api/MyUniversity.Api.csproj
+++ b/MyUniversity.Api/MyUniversity.Api.csproj
@@ -98,13 +98,16 @@
   <ItemGroup>
     <Compile Include="App_Start\Bootstrapper.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
+    <Compile Include="Helpers\DictionaryKey.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\AppSettingHelper.cs" />
+    <Compile Include="Helpers\ValueHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -128,10 +131,6 @@
     <ProjectReference Include="..\MyUniversity.Contracts\MyUniversity.Contracts.csproj">
       <Project>{BCB4DDFD-F7D7-4187-AC3F-63AF6ABEEFD1}</Project>
       <Name>MyUniversity.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MyUniversity.Dal\MyUniversity.Dal.csproj">
-      <Project>{4a63ae90-bc49-4ac2-b2e7-4b5f0c293e13}</Project>
-      <Name>MyUniversity.Dal</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
