--- a/MyUniversity.Services/MyUniversity.Services.csproj
+++ b/MyUniversity.Services/MyUniversity.Services.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DepartmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
+    <Compile Include="TeacherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyUniversity.Contracts\MyUniversity.Contracts.csproj">
