--- a/MyUniversity.Web/MyUniversity.Web.csproj
+++ b/MyUniversity.Web/MyUniversity.Web.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Students\Details.cshtml" />
     <Content Include="Views\Students\Edit.cshtml" />
     <Content Include="Views\Students\Index.cshtml" />
+    <Content Include="Views\Departments\Restore.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
