--- a/MyUniversity.Contracts/MyUniversity.Contracts.csproj
+++ b/MyUniversity.Contracts/MyUniversity.Contracts.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Models\EnrollmentModel.cs" />
     <Compile Include="Models\TeacherModel.cs" />
     <Compile Include="Models\OfficeAssignmentModel.cs" />
-    <Compile Include="Models\PersonBaseModel.cs" />
+    <Compile Include="Models\PersonModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IBaseService.cs" />
