--- a/MyUniversity.Api/MyUniversity.Api.csproj
+++ b/MyUniversity.Api/MyUniversity.Api.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
+    <Compile Include="Controllers\EnrollmentsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\StudentsODataController.cs" />
