--- a/MyUniversity.Services/MyUniversity.Services.csproj
+++ b/MyUniversity.Services/MyUniversity.Services.csproj
@@ -65,6 +65,7 @@
     <Compile Include="BaseService.cs" />
     <Compile Include="CourseService.cs" />
     <Compile Include="DepartmentService.cs" />
+    <Compile Include="EnrollmentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
     <Compile Include="TeacherService.cs" />
