#Update relationship between Department and  Office Assignment

--- a/MyUniversity.Dal/MyUniversity.Dal.csproj
+++ b/MyUniversity.Dal/MyUniversity.Dal.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\201512150952304_AddRowVersion.Designer.cs">
       <DependentUpon>201512150952304_AddRowVersion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601100644120_UpdateRelationshipDepartment-OfficeAssignment.cs" />
+    <Compile Include="Migrations\201601100644120_UpdateRelationshipDepartment-OfficeAssignment.Designer.cs">
+      <DependentUpon>201601100644120_UpdateRelationshipDepartment-OfficeAssignment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\Contracts\IEnrollmentRepository.cs" />
     <Compile Include="Entities\OfficeAssignment.cs" />
     <Compile Include="Entities\Profile.cs" />
@@ -162,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512150952304_AddRowVersion.resx">
       <DependentUpon>201512150952304_AddRowVersion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601100644120_UpdateRelationshipDepartment-OfficeAssignment.resx">
+      <DependentUpon>201601100644120_UpdateRelationshipDepartment-OfficeAssignment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
