--- a/MyUniversity.Api/Web.config
+++ b/MyUniversity.Api/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="DbFrameworkType" value="EntityFramework" />
+    <!--<add key="DbFrameworkType" value="EntityFramework" />-->
+    <add key="DbFrameworkType" value="NHibernate" />
   </appSettings>
   <connectionStrings>
     <add name="MyUniversityDb" connectionString="data source=.;initial catalog=MyUniversity;MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
