--- a/MyUniversity.Dal/MyUniversity.Dal.csproj
+++ b/MyUniversity.Dal/MyUniversity.Dal.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Migrations\201601120955201_AddVirtualIntoOthers.Designer.cs">
       <DependentUpon>201601120955201_AddVirtualIntoOthers.cs</DependentUpon>
     </Compile>
+    <Compile Include="NHibernateCustomDatadaseEventListener.cs" />
     <Compile Include="Repositories\Contracts\IEnrollmentRepository.cs" />
     <Compile Include="Entities\OfficeAssignment.cs" />
     <Compile Include="Entities\Profile.cs" />
