#Upload log4net.

--- a/MyUniversity.Web/log4net.config
+++ b/MyUniversity.Web/log4net.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net>
+<log4net debug="false">
   <root>
     <level value="ALL" />
-    <appender-ref ref="FallbackAppender"/>
+    <appender-ref ref="RollingFileAppender"/>
   </root>
-  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
+  <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
     <threshold value="ALL"/>
-    <file value="Logs/MU.txt" />
+    <file value="Logs/Log.txt" />
     <appendToFile value="true" />
     <rollingStyle value="Composite" />
     <maxSizeRollBackups value="14" />
@@ -14,7 +14,7 @@
     <datePattern value="yyyyMMdd" />
     <staticLogFileName value="true" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="{%level}%date{MM/dd HH:mm:ss} - %message%newline"/>
+      <conversionPattern value="{%level}%date{MM/dd HH:mm:ss} - %message%newline%exception%newline"/>
     </layout>
   </appender>
 </log4net>
