--- a/MyUniversity.Api/MyUniversity.Api.csproj
+++ b/MyUniversity.Api/MyUniversity.Api.csproj
@@ -111,11 +111,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GlobalErrorLogger.cs" />
     <Compile Include="Helpers\AppSettingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="log4net.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
