#Upload Nhibernate Concurrency checking.

--- a/MyUniversity.Api/log4net.config
+++ b/MyUniversity.Api/log4net.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net debug="false">
   <root>
-    <level value="ERROR" />
+    <level value="FATAL" />
     <appender-ref ref="RollingFileAppender"/>
   </root>
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <threshold value="ERROR"/>
+    <threshold value="FATAL"/>
     <file value="Logs/Log.txt" />
     <appendToFile value="true" />
     <rollingStyle value="Composite" />
