--- a/MyUniversity.Services/packages.config
+++ b/MyUniversity.Services/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AutoMapper" version="4.0.4" targetFramework="net40" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
+  <package id="NHibernate" version="4.0.0.4000" targetFramework="net40" />
 </packages>
